@@ -5,6 +5,8 @@ Release 5.0.3 (unreleased)
 Bug fixes
 ---------
 
+- Fix call to eigen values computation in coupled Rij-SSG solver.
+
 - Fix for triangulation of warped faces issue (preceding version 4.0).
 
 Release 5.0.2 (June 23 2017)
